# txrrc

./: .gitignore  README.md  pyproject.toml  todo.md
backend/: pyproject.toml
backend/src/: config.py  describedb.py  drilling_permit_master.py  main.py  parser.py  parser01.py  parser02.py  process.py  processtxt.py  pulldata.py  pulltxt.py  reviewdb.py  testdb.py
backend/src/api/auth/: security.py
backend/src/api/dependencies/: database.py  testingdb.py
backend/src/api/models/: permit_models.py  test_permit_modes.py
backend/src/api/routes/: admin.py  permits.py
backend/src/api/services/: permits_service.py  test_permits_service.py
backend/src/parsers/: process.py  pulldata.py
